--- a/food-app/src/index.css
+++ b/food-app/src/index.css
@@ -1,14 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: outfit;
 }
 
-body{
+body {
   min-height: 100vh;
 }
 
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
